--- a/web-app/css/qvga.css
+++ b/web-app/css/qvga.css
@@ -97,8 +97,8 @@ th {
 	font-weight:bold;
 }
 .confirm_checkbox {
-	width: 30px;
-	height: 30px;
+	width: 24px;
+	height: 24px;
 }
 .button_style {
 	padding-bottom: 0px;
